# whisperer

./: .gitignore  .secrets.example.toml  Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  protocols.py  pyproject.toml  requirements.txt  settings.toml
